# tilelang

./: .clang-tidy  .clangd  .coderabbit.yaml  .git_commit.txt  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  a.py  att.txt  build.sh  draft.md  example_strided_serial.py  format.sh  input.txt  install_cpu.sh  install_cuda.sh  install_hip.sh  install_metal.sh  install_rocm.sh  kernel copy.cu  kernel.cu  per_tensor_cast_e4m3.ncu-rep  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test-cuda.txt  requirements-test-cuda12.txt  requirements-test-cuda13.txt  requirements-test.txt  requirements.txt  setup.py  (+17 more)
.github/: copilot-instructions.md
.github/workflows/: amd_ci.yml  bot.yml  ci.yml  codeql.yml  dist.yml  metal_ci.yml  pr-perfbench-bot.yml  pr-regression-test-bot.yml  pr-reminder-bot.yml  publish-docs.yml  publish_docs.yml  reminder.yml  rocm-ci.yml  tenstorrent-ci.yml
benchmark/blocksparse_attention/: benchmark_library_dense_fmha.py  benchmark_tilelang_block_sparse_fmha.py  benchmark_torch_block_sparse_fmha.py  benchmark_triton_block_sparse_fmha.py
benchmark/distributed/: benchmark_all_gather.py  benchmark_reduce_scatter.py
benchmark/mamba2/: README.md  benchmark_mamba_chunk_scan.py
benchmark/matmul/: benchmark_matmul.py  benchmark_matmul_intrinsic.py  benchmark_matmul_sp.py  benchmark_matmul_sp_compress.py
benchmark/matmul_fp8/: README.md  benchmark_matmul.py
benchmark/matmul_metal/: benchmark_matmul_metal.py
cmake/: FindPipCUDAToolkit.cmake  FindTVM.cmake  ccache_strip_pep517.py  find_pip_cuda.py  generate_windows_import_lib.py  rewrite_dylib_dependency.cmake
cmake/pypi-z3/: FindZ3.cmake
docker/: Dockerfile.rocm_sgl
docs/: GEMM_NV_FP4_FEATURE_STEPS.md  Installation.md  conf.py  distributed_api_reference.md  index.md  plan.md  spelling_wordlist.txt
docs/compiler_internals/: inject_fence_proxy.md  letstmt_inline.md  metal_tilelang_development.md
docs/deeplearning_operators/: deepseek_mla.md  elementwise.md  flash_attention.md  gemv.md  matmul.rst  matmul_sparse.md  metal_gemm.md
docs/design/: tcgen05_st_and_gemm_ts.md  tmp.py
docs/developer_guide/: cpp_style.md
docs/get_started/: Installation.md  Installation.rst  Installation_dcu.md  targets.md
docs/programming_guides/: cluster_tma.md  instructions.md  language_basics.md  software_pipeline.md  tilelang_semantics.md
docs/runtime_internals/: stubs.md
docs/tenstorrent/: CI.md  GPU_vs_Tenstorrent.md  kernel_authoring_comparison.md  project_1.md  project_1_prompt.md
docs/tutorials/: auto_tuning.md  debug_tools_for_tilelang.md  logging.md
examples/: conftest.py  example_flex_attn_wgmma.py  example_flex_attn_wgmma_unchanged.py  gemm_with_stride.py  gemm_with_stride2.py  gemm_with_stride3.py  gemm_with_stride4.py  gemm_with_stride5.py  quickstart.py
examples/KDA/: chunk_bwd_dqkwg.py  chunk_bwd_dv.py  chunk_bwd_gla_dA.py  chunk_bwd_intra.py  chunk_bwd_intra_op.py  chunk_delta_bwd.py  chunk_delta_h_fwd.py  chunk_inter_solve_fused.py  chunk_intra_token_parallel.py  chunk_o.py  test_utils.py  test_utils_kda.py  wy_fast.py  wy_fast_bwd.py
examples/amd/: example_amd_flash_attn_bwd.py  example_amd_flash_attn_fwd.py  example_amd_flash_attn_fwd_k_block.py  test.sh
examples/analyze/: README.md  example_conv_analyze.py  example_gemm_analyze.py  test_example_analyze.py
examples/attention_sink/: README.md  bench_example_attention_sink.py  benchmark_gqa_sink_fwd.py  benchmark_mha_sink_fwd.py  example_gqa_sink_bwd_bhsd.py  example_gqa_sink_bwd_varlen.py  example_gqa_sink_fwd_bhsd_wgmma_pipelined.py  example_gqa_sink_fwd_varlen.py  example_mha_sink_bwd_bhsd.py  example_mha_sink_fwd_bhsd.py  example_mha_sink_fwd_bhsd_wgmma_pipelined.py  example_mha_sink_fwd_bshd.py  example_mha_sink_fwd_bshd_wgmma_pipelined.py  test_example_attention_sink.py
examples/auto_schedule/: flashmla_benchmark.py  gqa_bwd_benchmark.py
examples/autodd/: README.md  tilelang_buggy.py
examples/bitnet-1.58b/: README.md  eval_ppl.py  (+12 more)
my_test/: gemm_test  kernel.cu  main.cpp
src/: config.h  ir.cc  span_utils.cc  span_utils.h
src/backend/amd/: CMakeLists.txt
src/backend/cuda/: CMakeLists.txt  runtime.cc  runtime.h
src/backend/cuda/codegen/: codegen_cuda.cc  codegen_cuda.h  codegen_cutedsl.cc  codegen_cutedsl.h  codegen_py.cc  codegen_py.h  intrin_rule_cuda.cc  ptx.cc  ptx.h  rt_mod_cuda.cc  rt_mod_cutedsl.cc
src/backend/cuda/codegen/stubs/: cuda.cc  cudart.cc  dynlib.h  nvrtc.cc
src/backend/cuda/op/: atomic_add.cc  atomic_reduce.cc  copy.cc  copy.h  copy_analysis.cc  finalize_reducer.cc  gemm.cc  gemm_sp.cc  reduce.cc  scan.cc
src/backend/cuda/stubs/: cuda.cc  cuda.h  cudart.cc  nvrtc.cc
src/backend/cuda/transform/: annotate_warp_group_reg_alloc.cc  fuse_mbarrier_arrive_expect_tx.cc  inject_fence_proxy.cc  inject_tcgen05_fence.cc  lower_blackwell_2sm.cc  lower_hopper_intrin.cc  lower_l2_persistent_annotation.cc  lower_ldg_stg.cc  lower_pdl.cc  lower_shared_barrier.cc  lower_shared_tmem.cc  multi_version_buffer_rewriter.cc  persist_threadblock.cc  producer_consumer_ws.cc
src/backend/nvidia/: CMakeLists.txt
src/backend/nvidia/runtime/: runtime.cc
src/backend/rocm/: CMakeLists.txt
src/backend/rocm/codegen/: codegen_hip.cc  codegen_hip.h  intrin_rule_hip.cc  rt_mod_hip.cc
src/backend/rocm/op/: atomic_add.cc  atomic_reduce.cc  copy.cc  finalize_reducer.cc  gemm.cc  gemm_sp.cc  reduce.cc  scan.cc
src/backend/rocm/stubs/: hiprtc.cc
src/rocm/: CMakeLists.txt  target_utils.cc  target_utils.h
src/rocm/codegen/: codegen_hip.cc  intrin_rule_hip.cc
src/rocm/op/: atomic_add.cc  atomic_reduce.cc  copy.cc  fill.cc  finalize_reducer.cc  gemm.cc  reduce.cc  scan.cc  transpose.cc
src/rocm/stubs/: hip.cc  hip.h  hiprtc.cc
src/rocm/transform/: async_copy_injector.cc  async_copy_injector.h
t/: cc.sh  devc.c  lib0.c
testing/: 2.txt  conftest.py
tilelang/: __init__.py  _ffi_api.py  _typing.py  autodd.py  env.py  errors.py  ir.py  libinfo.py  typing.py  version.py
(+1904 files in other folders)
